@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Only use ERESTART when present
+
 0.001     2020-12-07 22:54:24-08:00 America/Los_Angeles
 
     - Initial Release (Lets see what platforms it breaks on!)
